--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Leonardo34/Zack-Chatbot/issues"
   },
-  "homepage": "https://github.com/Leonardo34/Zack-Chatbot#readme"
+  "homepage": "https://github.com/Leonardo34/Zack-Chatbot#readme",
+  "dependencies": {
+    "express": "^3.21.2"
+  }
 }
