--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Leonardo34/Zack-Chatbot#readme",
   "dependencies": {
+    "axios": "^0.17.0",
     "express": "^3.21.2"
   },
   "devDependencies": {
